updated for testing git diff command

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<title> Test Heading</title>
 </head>
 <body>
-Hello World. This is welcome page
-<div>Added in the branch </div>
+Hello World.
+<div>Added in the branch. modified for example </div>
+<div> new section for comparision </div>
 </body>
 
 
